[gd_scene load_steps=9 format=3 uid="uid://b25mvg668ibpu"]

[ext_resource type="Script" uid="uid://dfuttdv8rvdd0" path="res://Scenes/game_over_screen.gd" id="1_e5yba"]
[ext_resource type="FontFile" uid="uid://c7yt8i7uy4bel" path="res://textures/fonts/Roboto-VariableFont_wdth,wght.ttf" id="1_kk8k2"]
[ext_resource type="Texture2D" uid="uid://xsx1uif6i1oq" path="res://icon.svg" id="2_e5yba"]
[ext_resource type="Texture2D" uid="uid://dhmu0toe1itnr" path="res://textures/special/clip.png" id="3_ladg1"]
[ext_resource type="Texture2D" uid="uid://dutip72dl002r" path="res://textures/special/origin.png" id="4_un84n"]
[ext_resource type="LabelSettings" uid="uid://b5bcy41qe5cki" path="res://textures/button_text.tres" id="5_ladg1"]

[sub_resource type="LabelSettings" id="LabelSettings_8t0r8"]
font = ExtResource("1_kk8k2")
font_size = 150
outline_size = 15
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3gi6v"]
font = ExtResource("1_kk8k2")
font_size = 75
outline_size = 7
outline_color = Color(0, 0, 0, 1)

[node name="Game Over Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e5yba")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -345.5
offset_right = 345.5
offset_bottom = 203.0
grow_horizontal = 2
text = "Time's Up!"
label_settings = SubResource("LabelSettings_8t0r8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="final_score" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -330.0
offset_top = 163.0
offset_right = 330.0
offset_bottom = 322.0
grow_horizontal = 2
text = "Final Score: 000000"
label_settings = SubResource("LabelSettings_3gi6v")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Restart Button" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.0
offset_top = -14.0
offset_right = 194.0
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("2_e5yba")
texture_hover = ExtResource("3_ladg1")
ignore_texture_size = true
stretch_mode = 1

[node name="Label" type="Label" parent="Restart Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Restart"
label_settings = ExtResource("5_ladg1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Return Button" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.0
offset_top = 106.0
offset_right = 194.0
offset_bottom = 206.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_un84n")
texture_hover = ExtResource("3_ladg1")
ignore_texture_size = true
stretch_mode = 1

[node name="Label" type="Label" parent="Return Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -9.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit"
label_settings = ExtResource("5_ladg1")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Restart Button" to="." method="restart_level"]
[connection signal="pressed" from="Return Button" to="." method="quit_to_menu"]
